fixed spacing error in hero-section

--- a/css/general.css
+++ b/css/general.css
@@ -62,7 +62,7 @@ body {
 .header-primary {
   font-size: 5.2rem;
   line-height: 1.05;
-  margin-bottom: 4rem;
+  margin-bottom: 3.2rem;
 }
 
 .header-secondary {
@@ -119,6 +119,10 @@ body {
 
 .header-center {
   text-align: center;
+}
+
+.margin-right-sm {
+  margin-right: 1.2rem;
 }
 .btn,
 .btn:link,
