--- a/css/queries.css
+++ b/css/queries.css
@@ -19,7 +19,7 @@
 /* below  (126px for landscape tablets) */
 /*****************************************/
 
-@media (max-width: 78em) {
+@media (max-width: 75em) {
   /* 9px / 16 * 100 */
 
   html {
@@ -30,6 +30,10 @@
     column-gap: 4.8rem;
     row-gap: 6.4rem;
   }
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+
   .header-secondary {
     font-size: 2.4rem;
   }
@@ -68,8 +72,8 @@
     width: 60%;
   }
 
-  .hero-textbox,
-  .hero-image {
+  .hero-text-box,
+  .hero-img-box {
     text-align: center;
   }
 
