--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,34 @@
 /*****************************************/
-/* HERO SECTION COMPONENTS */
-/*****************************************/
+/* HEADER SECTION COMPONENTS */
+/****************************************/
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-.section-hero {
   background-color: #fdf2e9;
-  padding: 3.2rem 0 9.6rem 0;
+
+  height: 9.6rem;
+  padding: 0 4.8rem;
 }
 
-.hero-section {
-  max-width: 130rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  gap: 9.6rem;
+.header img {
+  height: 2.2rem;
 }
 
-.hero-img {
-  width: 100%;
-}
-
-.hero-textbox {
-  font-size: 2rem;
-  margin-bottom: 4rem;
-  line-height: 1.5;
-}
-
-.btn-links {
-  display: flex;
-  gap: 1.6rem;
-}
-
-.logos {
-  display: flex;
-  justify-content: space-between;
-}
-
-.main-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 3.6rem 4.8rem 3.6rem;
-}
-.main-header img {
-  width: 15rem;
-}
+/*****************************************/
+/* NAVIGATION COMPONENTS */
+/*****************************************/
 
 .main-nav-link {
   display: flex;
-  gap: 2.2rem;
+  gap: 4.8rem;
   align-items: center;
+  list-style: none;
 }
 .main-nav-link a:link,
 .main-nav-link a:visited {
-  display: block;
+  display: inline-block;
   text-decoration: none;
   color: #333;
   font-weight: 500;
@@ -76,6 +52,43 @@
 .main-nav-link a.nav-cta:hover,
 .main-nav-link a.nav-cta:active {
   background-color: #cf711f;
+}
+
+/*****************************************/
+/* HERO SECTION COMPONENTS */
+/*****************************************/
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.hero-text-box {
+  font-size: 2rem;
+  margin-bottom: 4rem;
+  line-height: 1.5;
+}
+.hero-description {
+  margin-bottom: 2.4rem;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-between;
 }
 
 .customer-imgs img {
@@ -106,20 +119,21 @@
 /*****************************************/
 
 .section-featured {
-  padding: 3.2rem 0 9.6rem 0;
+  padding: 4.8rem 0 3.2rem 0;
 }
 .section-featured h2 {
   text-align: center;
   text-transform: uppercase;
   font-weight: 500;
-  color: #777;
-  letter-spacing: 1.05;
-  margin-bottom: 2.2rem;
+  color: #999;
+  letter-spacing: 0.75px;
+  margin-bottom: 2.4rem;
+  font-size: 1.4rem;
 }
 
 .featured-logos {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .featured-logos img {
@@ -133,7 +147,7 @@
 /*****************************************/
 
 .section-how {
-  padding: 0 0 9.6rem 0;
+  padding: 9.6rem 0;
 }
 
 .section-how span {
